--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ganachala</title>
         <script src="https://kit.fontawesome.com/f2d9b61299.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" type="text/css" href="spotify.css">
+        <link rel="stylesheet" href="css/style.css" />
         <link rel="icon" href="https://cdn.iconscout.com/icon/premium/png-256-thumb/new-year-song-2-1092197.png">
     </head>
     <body>
