--- a/index.html
+++ b/index.html
@@ -93,6 +93,6 @@
         </div>
     </div>
 </div>
-<script src="/js/spotify.js"></script>
+<script src="js/spotify.js"></script>
 </body>
 </html>
