--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>ganachala</title>
         <script src="https://kit.fontawesome.com/f2d9b61299.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/style.css" />
-        <link rel="icon" href="https://cdn.iconscout.com/icon/premium/png-256-thumb/new-year-song-2-1092197.png">
+        <link rel="icon" href="https://cdn.iconscout.com/icon/premium/png-256-thumb/new-year-song-2-1092197.png" />
     </head>
     <body>
     
@@ -93,6 +93,6 @@
         </div>
     </div>
 </div>
-<script src="js/spotify.js"></script>
+<script src="spotify.js"></script>
 </body>
 </html>
