--- a/index.html
+++ b/index.html
@@ -93,6 +93,6 @@
         </div>
     </div>
 </div>
-<script src="spotify.js"></script>
+<script src="script.js" type="text/JavaScript"/>
 </body>
 </html>
