--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ganachala</title>
-        <script src="https://kit.fontawesome.com/f2d9b61299.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="css/style.css" />
+         <link rel="stylesheet" href="css/style.css" />
         <link rel="icon" href="https://cdn.iconscout.com/icon/premium/png-256-thumb/new-year-song-2-1092197.png" />
+<!--          <link rel="stylesheet" href="css/style.css" /> -->
+        <script src="https://kit.fontawesome.com/f2d9b61299.js" crossorigin="anonymous"></script>
     </head>
     <body>
     
