--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ganachala</title>
-         <link rel="stylesheet" href="css/style.css" />
+         <link rel="stylesheet" href="https://github.com/shushantshukla/phone_bazar.github.io/blob/main/style.css" />
         <link rel="icon" href="https://cdn.iconscout.com/icon/premium/png-256-thumb/new-year-song-2-1092197.png" />
-<!--          <link rel="stylesheet" href="css/style.css" /> -->
         <script src="https://kit.fontawesome.com/f2d9b61299.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -94,6 +93,7 @@
         </div>
     </div>
 </div>
-<script src="script.js" type="text/JavaScript"/>
+<!--  <script src="https://kit.fontawesome.com/f2d9b61299.js" crossorigin="anonymous"></script> -->
+<script src="https://github.com/shushantshukla/phone_bazar.github.io/blob/main/script.js" type="text/JavaScript"/>
 </body>
 </html>
